--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,15 @@
-
+ul {
+  margin-top: 0;
+  margin-bottom: 0;
+  padding-left: 0;
+}
+h1,h2,h3,h4,h5,h6 {
+  margin-top: 0;
+  margin-bottom: 0;
+}
+img {
+  display: block;
+}
 /* MAIN-COLOR */
 :root {
   --primary-text-color: #434455;
@@ -10,10 +21,75 @@
   --teaam-section-color: #f4f4fd;
   --footer-text-color : #e7e9fc;
 }
+/* BODY */
+body {
+  color:var(--primary-text-color);
+  font-family: 'Roboto', sans-serif;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+}
 
 
-/* LOGO */
+/* Header */
+
+.container{
+  width:1128px;
+  padding-left: 15px;
+  padding-right:15px;
+  margin-left: auto;
+  margin-right: auto;
+}
+.nav-list , .nav-item {
+  padding-top: 24px;
+  padding-bottom: 24px;
+}
+
+.main-nav {
+  display: flex;
+  align-items:  center;
+}
+.header-nav {
+  display:flex;
+}
+.nav-list {
+  align-items: center;
+}
+.contacts-list > .contacts-item {
+  font-style: normal;
+}
+.contacts-item > .contacts-link{
+  text-decoration: none;
+  color:var(--primary-text-color)
+}
+.contacts-link:hover ,  
+  .contacts-link:focus {
+  color:var(--btn--hover--color)
+}
+.nav-list {
+  display: flex;
+  list-style: none;
+  margin-left:76px;
+}
+.contacts-list {
+  display:flex;
+  list-style: none;
+  padding-top: 24px;
+  padding-bottom: 24px;
+}
+.contacts {
+  display: flex;
+  margin-left: auto;
+}
+.contacts-item:not(:last-child) {
+  margin-right: 40px;
+
+}
 .logo {
+  display: block;
+  padding-top: 24px;
+  padding-bottom: 24px;
+
   color:var(--secondary-text-color);
   font-family: 'Raleway',sans-serif;
   font-weight: 800;
@@ -30,23 +106,16 @@
 }
 .footer-logo {
   color:var(--teaam-section-color);
+  display: flex;
+flex-direction: row;
+align-items: flex-start;
+padding: 0px;
 }
 .footer-logo span {
   color:var(--logo-color)}
   .footer-descr {
   color:var(--footer-text-color)
   }
-
-
-/* BODY */
-body {
-  color:var(--primary-text-color);
-  font-family: 'Roboto', sans-serif;
-  font-size: 16px;
-  line-height: 1.5;
-  letter-spacing: 0.02em;
-}
-
 
 /* BUTTON */
 .btn {
@@ -65,6 +134,14 @@ body {
 .main-btn {
   color:var(--btn-hero-color);
   background-color: var(--logo-color);
+  margin:0 auto;
+  display:block;
+  flex-direction: row;
+  align-items: flex-start;
+  padding: 16px 32px;
+  gap: 10px;
+  border-radius: 4px;
+
 }
 
 .secondary-btn {
@@ -73,12 +150,13 @@ body {
 }
 
 
-/* NAVIGATION */
+
 .list {
   list-style: none;
 }
-.nav-item {
+.nav-item:not(:last-child){
   list-style: none;
+  margin-right:40px;
 }
 .nav-link {
   color:var(--primary-text-color);
@@ -89,29 +167,21 @@ body {
 .nav-link:hover , .nav-link:focus {
   color:var(--items-active-color);
 }
-.contacts-list {
-  list-style: none;
-}
-.contacts-list > .contacts-item {
-  font-style: normal;
-}
-.contacts-item > .contacts-link{
-  text-decoration: none;
-  color:var(--primary-text-color)
-}
-.contacts-link:hover ,  
-  .contacts-link:focus {
-  color:var(--btn--hover--color)
+
+.hero {
+  text-align:center;
 }
 
-
-/* TITLE */
 .hero-title {
   color:var(--btn-hero-color);
   font-style: normal;
   font-weight: 700;
   font-size: 56px;
   line-height: 1.07;
+  width:496px;
+  margin-bottom: 48px;
+  margin-left: auto;
+  margin-right:auto;
 }
 .title {
   color:var(--secondary-text-color);
@@ -121,8 +191,6 @@ body {
   line-height: 1.11;
 }
 
-
-/* DESCRIPTION */
 .descr {
   color:var(--secondary-text-color);
   font-family: 'Roboto', sans-serif;
@@ -132,18 +200,82 @@ body {
   line-height: 1.2;
 }
 .sub-descr {
+  margin-top: 8px;
   font-style: normal;
   font-weight: 400;
+  margin-bottom: 32px;
 }
 
 
-/* COLOR */
 .hero {
+  padding-top: 188px; ;
+  padding-bottom: 188px;
   background-color:var(--secondary-text-color);
 }
 .team {
   background-color:var(--teaam-section-color) ;
+  padding-top: 120px;
+  padding-bottom: 120px;
 }
+.team-title {
+  text-align: center;
+  margin-bottom: 72px;
+}
+
+.team-list {
+  display:flex;
+  gap:24px;
+}
+.team-item {
+  background-color: var(--btn-hero-color);
+  text-align: center;
+}
+.team-descr {
+margin-top: 32px;
+}
+/* .team-item:not(:last-child){
+margin-right: 24px;
+} */
 .footer {
   background-color: var(--secondary-text-color);
+  width: 1440px;
+  height: 310px;
+}
+
+.advatages-list {
+  padding-top: 120px;
+  padding-bottom: 120px;
+}
+.advantages {
+  display:flex;
+  gap:24px;
+}
+/* .advantages-item:not(:last-child) {
+  margin-right: 24px;
+
+} */
+.advantages-descr {
+  margin-bottom: 8px;
+}
+.example-pictures {
+  display: flex;
+  gap: 24px;
+}
+/* .example-pictures-list:not(:nth-child(3n)) {
+  margin-right:24px;
+} */
+.example-pictures-list {
+  margin-bottom:120px;
+  gap:24px;
+}
+.example-title {
+  text-align: center;
+  margin-bottom: 72px;
+}
+
+.footer-inf {
+  padding-top: 100px;
+  padding-bottom: 100px;
+  padding-left: 156px;
+  padding-right: 1020px;
 }
