--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,13 @@
 ul {
-  margin-top: 0;
-  margin-bottom: 0;
+  margin: 0;
   padding-left: 0;
 }
-h1,h2,h3,h4,h5,h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   margin-top: 0;
   margin-bottom: 0;
 }
@@ -19,38 +23,41 @@ img {
   --btn-hero-color: #fff;
   --btn--hover--color: #404bbf;
   --teaam-section-color: #f4f4fd;
-  --footer-text-color : #e7e9fc;
+  --footer-text-color: #e7e9fc;
 }
 /* BODY */
 body {
-  color:var(--primary-text-color);
-  font-family: 'Roboto', sans-serif;
+  color: var(--primary-text-color);
+  font-family: "Roboto", sans-serif;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
 }
 
-
 /* Header */
 
-.container{
-  width:1128px;
+.container {
+  width: 1128px;
   padding-left: 15px;
-  padding-right:15px;
+  padding-right: 15px;
   margin-left: auto;
   margin-right: auto;
 }
-.nav-list , .nav-item {
+.nav-list,
+.nav-item {
   padding-top: 24px;
   padding-bottom: 24px;
+}
+.nav-item {
+  flex-basis: calc((100%-48px) / 3);
 }
 
 .main-nav {
   display: flex;
-  align-items:  center;
+  align-items: center;
 }
 .header-nav {
-  display:flex;
+  display: flex;
 }
 .nav-list {
   align-items: center;
@@ -58,21 +65,21 @@ body {
 .contacts-list > .contacts-item {
   font-style: normal;
 }
-.contacts-item > .contacts-link{
+.contacts-item > .contacts-link {
   text-decoration: none;
-  color:var(--primary-text-color)
+  color: var(--primary-text-color);
 }
-.contacts-link:hover ,  
-  .contacts-link:focus {
-  color:var(--btn--hover--color)
+.contacts-link:hover,
+.contacts-link:focus {
+  color: var(--btn--hover--color);
 }
 .nav-list {
   display: flex;
   list-style: none;
-  margin-left:76px;
+  margin-left: 76px;
 }
 .contacts-list {
-  display:flex;
+  display: flex;
   list-style: none;
   padding-top: 24px;
   padding-bottom: 24px;
@@ -83,15 +90,14 @@ body {
 }
 .contacts-item:not(:last-child) {
   margin-right: 40px;
-
 }
 .logo {
   display: block;
   padding-top: 24px;
   padding-bottom: 24px;
 
-  color:var(--secondary-text-color);
-  font-family: 'Raleway',sans-serif;
+  color: var(--secondary-text-color);
+  font-family: "Raleway", sans-serif;
   font-weight: 800;
   font-size: 18px;
   line-height: 1.16;
@@ -102,89 +108,96 @@ body {
   text-decoration: none;
 }
 .logo span {
-  color:var(--logo-color)
+  color: var(--logo-color);
 }
 .footer-logo {
-  color:var(--teaam-section-color);
+  color: var(--teaam-section-color);
   display: flex;
-flex-direction: row;
-align-items: flex-start;
-padding: 0px;
+  flex-direction: row;
+  align-items: flex-start;
+  padding: 0px;
+  margin-bottom: 16px;
 }
 .footer-logo span {
-  color:var(--logo-color)}
-  .footer-descr {
-  color:var(--footer-text-color)
-  }
+  color: var(--logo-color);
+}
+.footer-descr {
+  color: var(--footer-text-color);
+}
 
 /* BUTTON */
 .btn {
-  font-family: 'Roboto', inherit;
+  font-family: "Roboto", inherit;
   font-style: normal;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
   cursor: pointer;
+  border: none;
+  border-radius: 4px;
+  margin: 0 auto;
+  display: block;
+  flex-direction: row;
+  align-items: flex-start;
 }
-.btn:hover,.btn:focus {
-  color:var(--btn-hero-color);
+.btn:hover,
+.btn:focus {
+  color: var(--btn-hero-color);
   background-color: var(--btn--hover--color);
 }
 
 .main-btn {
-  color:var(--btn-hero-color);
+  color: var(--btn-hero-color);
   background-color: var(--logo-color);
-  margin:0 auto;
-  display:block;
-  flex-direction: row;
-  align-items: flex-start;
   padding: 16px 32px;
-  gap: 10px;
-  border-radius: 4px;
-
 }
 
 .secondary-btn {
-  color:var(--logo-color);
+  color: var(--logo-color);
   background-color: var(--teaam-section-color);
+  padding: 12px 24px;
 }
+.nav-item-btn:not(:last-child) {
 
+  margin-right: 24px; 
 
+}
 
 .list {
   list-style: none;
 }
-.nav-item:not(:last-child){
+.nav-item:not(:last-child) {
   list-style: none;
-  margin-right:40px;
+  margin-right: 40px;
 }
 .nav-link {
-  color:var(--primary-text-color);
+  color: var(--primary-text-color);
   list-style: none;
   text-decoration: none;
   font-weight: 500;
 }
-.nav-link:hover , .nav-link:focus {
-  color:var(--items-active-color);
+.nav-link:hover,
+.nav-link:focus {
+  color: var(--items-active-color);
 }
 
 .hero {
-  text-align:center;
+  text-align: center;
 }
 
 .hero-title {
-  color:var(--btn-hero-color);
+  color: var(--btn-hero-color);
   font-style: normal;
   font-weight: 700;
   font-size: 56px;
   line-height: 1.07;
-  width:496px;
+  width: 496px;
   margin-bottom: 48px;
   margin-left: auto;
-  margin-right:auto;
+  margin-right: auto;
 }
 .title {
-  color:var(--secondary-text-color);
+  color: var(--secondary-text-color);
   font-style: normal;
   font-weight: 700;
   font-size: 36px;
@@ -192,8 +205,8 @@ padding: 0px;
 }
 
 .descr {
-  color:var(--secondary-text-color);
-  font-family: 'Roboto', sans-serif;
+  color: var(--secondary-text-color);
+  font-family: "Roboto", sans-serif;
   font-style: normal;
   font-weight: 500;
   font-size: 20px;
@@ -206,14 +219,13 @@ padding: 0px;
   margin-bottom: 32px;
 }
 
-
 .hero {
-  padding-top: 188px; ;
+  padding-top: 188px;
   padding-bottom: 188px;
-  background-color:var(--secondary-text-color);
+  background-color: var(--secondary-text-color);
 }
 .team {
-  background-color:var(--teaam-section-color) ;
+  background-color: var(--teaam-section-color);
   padding-top: 120px;
   padding-bottom: 120px;
 }
@@ -223,15 +235,15 @@ padding: 0px;
 }
 
 .team-list {
-  display:flex;
-  gap:24px;
+  display: flex;
+  gap: 24px;
 }
 .team-item {
   background-color: var(--btn-hero-color);
   text-align: center;
 }
 .team-descr {
-margin-top: 32px;
+  margin-top: 32px;
 }
 /* .team-item:not(:last-child){
 margin-right: 24px;
@@ -247,8 +259,11 @@ margin-right: 24px;
   padding-bottom: 120px;
 }
 .advantages {
-  display:flex;
-  gap:24px;
+  display: flex;
+  gap: 24px;
+}
+.advantages-item {
+  flex-basis: calc((100%-72px) / 4);
 }
 /* .advantages-item:not(:last-child) {
   margin-right: 24px;
@@ -265,8 +280,8 @@ margin-right: 24px;
   margin-right:24px;
 } */
 .example-pictures-list {
-  margin-bottom:120px;
-  gap:24px;
+  margin-bottom: 120px;
+  gap: 24px;
 }
 .example-title {
   text-align: center;
@@ -274,8 +289,31 @@ margin-right: 24px;
 }
 
 .footer-inf {
+  display: inline-block;
   padding-top: 100px;
   padding-bottom: 100px;
-  padding-left: 156px;
-  padding-right: 1020px;
+  width: 300px;
+  height: 72px;
+  margin-left: 56px;
 }
+
+.portfolio-descr {
+  margin-top: 32px;
+}
+
+.nav-list-portfolio {
+  display:flex;
+  justify-content: center;
+  margin-top:96px;
+  margin-bottom: 72px;
+  margin-left: auto;
+  margin-right: auto;
+  
+}
+.nav-item-btn {
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+  gap: 24px;
+}
+
