--- a/css/style.css
+++ b/css/style.css
@@ -37,7 +37,7 @@ body {
 /* Header */
 
 .container {
-  width: 1128px;
+  width: 1158px;
   padding-left: 15px;
   padding-right: 15px;
   margin-left: auto;
@@ -316,4 +316,15 @@ margin-right: 24px;
   align-items: flex-start;
   gap: 24px;
 }
-
+.filter-list {
+  display: flex;
+  flex-wrap: wrap;
+  column-gap: 24px;
+  row-gap: 48px;
+}
+.filter-item {
+  flex-basis: calc((100% - 48px) / 3);
+}
+.portfolio-descr {
+  margin-top: 32px;
+}
